--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "jobs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "dev": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.10"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "jobs",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"dev": "node app.js",
+		"start": "nodemon app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.11.10"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
